# bizy-ai

./: .claude_code.json  .clinerules  .env.example  .env.template  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_SUCCESS.md  LICENSE  MANIFEST.in  Makefile  PROJECT_COMPLETE.md  PYPI_PUBLISH.md  README.md  ROADMAP.md  STATUS.md  alembic.ini  app.yaml  docker-compose.yml  load_bizy_plan.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  deploy.yml
agent/: __init__.py  analytics.py  calendar_view.py  charts.py  cli.py  core.py  dashboard.py  evening_review.py  models.py  morning_brief.py  pdf_export.py  plan_manager.py  planner.py  research.py  tasks.py  utils.py  weekly_review.py
agent/integrations/: __init__.py  ical.py
backend/: .env.example  Dockerfile  QUICK_START.md  README.md  SCRIPTS_README.md  SETUP_COMPLETE.md  alembic.ini  config.py  database.py  install-python312.sh  requirements-dev.txt  requirements.txt  run.sh  setup.sh  test-api.sh
backend/alembic/: env.py
backend/api/: __init__.py  auth.py  dependencies.py  main.py
backend/docs/: TESTING.md  (+9 more)
docs/: BUSINESS_PLAN_COMPLETE.md  GETTING_STARTED.md  INSTALL.md  PHASE_3_ARCHITECTURE.md  PHASE_3_MVP_SPECS.md  PHASE_3_TASK_LIST.md  PROGRESS_REPORT_2025-10-23.md  QUICKSTART.md  SESSION_SUMMARY_2025-10-23.md
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
scripts/: agent_cli.py  deploy.sh  dev_setup.sh  init_db.py  make_executable.sh  migrate_db.py  run_tests.sh  setup.sh  verify-local.sh
templates/: bizy_business_plan.yaml  business_plan_template.yaml
tests/: __init__.py  conftest.py  test_charts.py  test_models.py  test_pdf_export.py  test_phase2.py  test_plan_manager.py  test_planner.py  test_tasks.py
(+68 files in other folders)
