[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bizy-ai"
version = "1.0.2"
description = "AI-powered business planning and execution agent"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Reid Chatham"}
]
keywords = ["ai", "business", "planning", "productivity", "cli", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business",
    "Topic :: Office/Business :: Scheduling",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "anthropic>=0.18.0",
    "schedule>=1.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.0.0",
    "rich>=13.0.0",
    "python-dateutil>=2.8.2",
    "click>=8.1.0",
    "jinja2>=3.1.2",
]

[project.scripts]
bizy = "agent.cli:cli"

[project.urls]
Homepage = "https://github.com/reidchatham/bizy-ai"
Documentation = "https://github.com/reidchatham/bizy-ai#readme"
Repository = "https://github.com/reidchatham/bizy-ai"
Issues = "https://github.com/reidchatham/bizy-ai/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "scripts*"]
exclude = ["tests*", "venv*", "data*"]
